# DiVoid

./: .dockerignore  .editorconfig  .gitignore  CLAUDE.md  DiVoid.sln  Dockerfile  nuget.config  omnisharp.json
Backend/: Backend.csproj  Program.cs  Startup.cs  appsettings.Development.json  appsettings.json
Backend.tests/: Backend.tests.csproj  TestSetup.cs
Backend.tests/Fixtures/: CancellationTokenRejectingDbClientSpy.cs  CapturingLoggerProvider.cs  DatabaseFixture.cs  (+1 more)
divoid-mcp/: .editorconfig  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
divoid-mcp/docs/: drift-policy.md  install.md
divoid-mcp/docs/architecture/: phase-1.md
divoid-mcp/examples/: .mcp.json
divoid-mcp/src/divoid_mcp/: __init__.py  __main__.py  config.py  drift.py  errors.py  http_client.py  resources.py  server.py  version.py
divoid-mcp/src/divoid_mcp/tools/: __init__.py  _groups.py  create_documentation.py  create_node.py  create_session_log.py  create_task.py  delete_message.py  delete_node.py  download_content.py  edit_content.py  get_content.py  get_links.py  get_node.py  link_nodes.py  list_messages.py  list_nodes.py  patch_node.py  resolve_user.py  search.py  send_message.py  set_content.py  set_status.py  unlink_nodes.py
divoid-mcp/tests/smoke/: README.md  run_all.py
divoid-mcp/tests/unit/: test_download_content.py  test_edit_content.py  test_tool_routing.py
frontend/: .env.example  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
scripts/: copy-packages.ps1  copy-packages.sh
(+319 files in other folders)
