[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "divoid-mcp"
version = "0.1.0"
description = "MCP server wrapping the DiVoid graph API"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "mcp==1.27.1",
    "httpx>=0.27,<0.29",
]

[project.scripts]
divoid-mcp = "divoid_mcp.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/unit"]

[tool.hatch.build.targets.wheel]
packages = ["src/divoid_mcp"]

[tool.hatch.build.targets.sdist]
include = ["src/", "tests/", "docs/", "README.md", "LICENSE"]
